Makes some adjustements to the forms

--- a/public/form/changepassword.html
+++ b/public/form/changepassword.html
@@ -1,11 +1,11 @@
 <html lang="en">
 <head>
-	<title>Thank you</title>
+	<title>Change password - Global Fishing Watch</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
 </head>
-<body class="bg ty">
+<body class="bg reg">
 	<div class="mobile-menu js-mobile-menu">
 		<div class="drawer">
 			<ul>
@@ -42,7 +42,7 @@
 		</svg>
 
 		<a href="/">
-			<h1 class="logo">Thank you - Global Fishing Watch</h1>
+			<h1 class="logo">Global Fishing Watch</h1>
 		</a>
 
 		<ul class="desktop-menu">
@@ -67,13 +67,29 @@
 					<li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
-			<li><a href="#">Login</a></li>
+			<li><a href="#" class="selected">Login</a></li>
 		</ul>
 	</header>
-	<section class="ty">
-		<h1>Thank you!</h1>
-		<p>Thank you for registering to Global Fishing Watch!</p>
-    <p>You will receive an email confirmation shortly.</p>
+
+	<section class="reg">
+		<form method="post" action="#">
+			<h1>Change password</h1>
+			<div class="reg-form">
+        <div class="item">
+					<label for="gfw_old_password">Old Password *</label>
+					<input type="text" id="gfw_old_password" placeholder="********" required />
+        </div>
+        <div class="item">
+          <label for="gfw_password">New Password *</label>
+          <input type="text" id="gfw_password" placeholder="********" required />
+        </div>
+        <div class="item">
+          <label for="gfw_repeat_password">Repeat New Password *</label>
+          <input type="text" id="gfw_repeat_password" placeholder="********" required />
+        </div>
+			</div>
+			<input type="submit" value="CHANGE"/>
+		</form>
 	</section>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
