--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-	<title>Password Reset</title>
+	<title>Password Reset - Global Fishing Watch</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
@@ -75,7 +75,7 @@
 		<p>Please enter the email address that you used when creating your account.</p>
 		<p>An email will be sent to that address with further instructions on how to reset your password.</p>
 		<form method="post" action="#">
-			<label for="gfw_email">Email address</label>
+			<label for="gfw_email">Email address *</label>
 			<input type="email" id="gfw_email" placeholder="Email address" required />
 			<input type="submit" value="SEND PASSWORD"/>
 			<a href="#" class="cancel">Cancel</a>
