added some styles and markup to password forms

--- a/public/form/changepassword.html
+++ b/public/form/changepassword.html
@@ -74,6 +74,11 @@
 	<section class="reg">
 		<form method="post" action="#">
 			<h1>Change password</h1>
+      <h2>Enter a new password</h2>
+      <div class="password-hint">
+        <span>Your password must have at least:</span>
+        <span>8 characters, 1 letter, 1 number</span>
+      </div>
 			<div class="reg-form">
         <div class="item">
 					<label for="gfw_old_password">Old Password *</label>
