--- a/public/form/newpassword.html
+++ b/public/form/newpassword.html
@@ -73,18 +73,24 @@
 
 	<section class="reg">
 		<form method="post" action="#">
-			<h1>Create password</h1>
+			<h1>Set your password</h1>
+      <h2>Enter a new password</h2>
+      <div class="password-hint">
+        <span>Your password must have at least:</span>
+        <span>8 characters, 1 letter, 1 number</span>
+      </div>
+
 			<div class="reg-form">
         <div class="item">
-          <label for="gfw_password">Password *</label>
+          <label for="gfw_password">New Password *</label>
           <input type="text" id="gfw_password" placeholder="********" required />
         </div>
         <div class="item">
-          <label for="gfw_repeat_password">Repeat Password *</label>
+          <label for="gfw_repeat_password">Verify new password *</label>
           <input type="text" id="gfw_repeat_password" placeholder="********" required />
         </div>
 			</div>
-			<input type="submit" value="Save"/>
+			<input type="submit" value="set password"/>
 		</form>
 	</section>
 	<script>
