replaced paragraphs & removed useless styles

--- a/public/form/newpassword.html
+++ b/public/form/newpassword.html
@@ -76,8 +76,8 @@
 			<h1>Set your password</h1>
       <h2>Enter a new password</h2>
       <div class="password-hint">
-        <span>Your password must have at least:</span>
-        <span>8 characters, 1 letter, 1 number</span>
+        <p>Your password must have at least:</p>
+        <p>8 characters, 1 letter, 1 number</p>
       </div>
 
 			<div class="reg-form">
