--- a/public/form/changepassword.html
+++ b/public/form/changepassword.html
@@ -76,8 +76,8 @@
 			<h1>Change password</h1>
       <h2>Enter a new password</h2>
       <div class="password-hint">
-        <span>Your password must have at least:</span>
-        <span>8 characters, 1 letter, 1 number</span>
+        <p>Your password must have at least:</p>
+        <p>8 characters, 1 letter, 1 number</p>
       </div>
 			<div class="reg-form">
         <div class="item">
@@ -93,7 +93,7 @@
           <input type="text" id="gfw_repeat_password" placeholder="********" required />
         </div>
 			</div>
-			<input type="submit" value="CHANGE"/>
+			<input type="submit" value="set password"/>
 		</form>
 	</section>
 	<script>
