--- a/public/form/allow.html
+++ b/public/form/allow.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+  <meta charset="utf-8">
   <title>Allow access</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
