--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Password Reset - Global Fishing Watch</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,13 +37,13 @@
 		</div>
 	</div>
 
-	<header class="menu">
+  <header class="menu wrap">
 		<svg class="hamburger-icon js-hamburger-menu" viewBox="0 0 25 25">
 			<path d="M0 2h25v4H0V2zm0 8h25v4H0v-4zm0 8h25v4H0v-4z" fill="#FFF" fill-rule="evenodd"/>
 		</svg>
 
-		<a href="/">
-			<h1 class="logo">Global Fishing Watch</h1>
+		<a class="logo" href="/">
+			<img src="img/gfw_logo_hor.svg" alt="logo global fishing watch">
 		</a>
 
 		<ul class="desktop-menu">
@@ -67,7 +68,7 @@
 					<li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
-			<li><a href="#" class="selected">Login</a></li>
+			<li><a href="#">Login</a></li>
 		</ul>
 	</header>
 	<section class="pwd">
@@ -78,9 +79,12 @@
 			<label for="gfw_email">Email address *</label>
 			<input type="email" id="gfw_email" placeholder="Email address" required />
 			<input type="submit" value="SEND PASSWORD"/>
-			<a href="#" class="cancel">Cancel</a>
+			<a href="login.html" class="cancel">Cancel</a>
 		</form>
 	</section>
+	<div class="attribution-picture">
+		<span>Photo: Aysunbk/iStock/Thinkstock</span>
+	</div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
