--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Thank you</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -36,13 +37,13 @@
 		</div>
 	</div>
 
-	<header class="menu">
+  <header class="menu wrap">
 		<svg class="hamburger-icon js-hamburger-menu" viewBox="0 0 25 25">
 			<path d="M0 2h25v4H0V2zm0 8h25v4H0v-4zm0 8h25v4H0v-4z" fill="#FFF" fill-rule="evenodd"/>
 		</svg>
 
-		<a href="/">
-			<h1 class="logo">Thank you - Global Fishing Watch</h1>
+		<a class="logo" href="/">
+			<img src="img/gfw_logo_hor.svg" alt="logo global fishing watch">
 		</a>
 
 		<ul class="desktop-menu">
@@ -75,6 +76,9 @@
 		<p>Thank you for registering to Global Fishing Watch!</p>
     <p>You will receive an email confirmation shortly.</p>
 	</section>
+  <div class="attribution-picture">
+    <span>Photo: © OCEANA / Keith Ellenbogen</span>
+  </div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
