new backgorund images on login and register page and update logo

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -1,6 +1,7 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
 	<title>Login - Global Fishing Watch</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -95,7 +96,9 @@
 			</div>
 		</form>
 	</section>
-
+	<div class="attribution-picture">
+		<span>Photo: © OCEANA / Keith Ellenbogen</span>
+	</div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
