--- a/public/form/registration.html
+++ b/public/form/registration.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+	<meta charset="utf-8">
 	<title>Registration - Global Fishing Watch</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -121,6 +122,9 @@
 			<input type="submit" value="REGISTER"/>
 		</form>
 	</section>
+	<div class="attribution-picture">
+		<span>Photo: Aysunbk/iStock/Thinkstock</span>
+	</div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
