added photo attribution

--- a/public/500.html
+++ b/public/500.html
@@ -77,6 +77,9 @@
       <h2 class="title-status">500</h2>
       <p class="description">Internal server error</p>
     </div>
+    <div class="attribution">
+      <span class="author">Photo: © OCEANA / Keith Ellenbogen</span>
+    </div>
   </div>
 
 
