update header dropdown menu on static pages

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -44,8 +44,8 @@
 			<path d="M0 2h25v4H0V2zm0 8h25v4H0v-4zm0 8h25v4H0v-4z" fill="#FFF" fill-rule="evenodd"/>
 		</svg>
 
-		<a href="/">
-			<h1 class="logo">Global Fishing Watch</h1>
+		<a class="logo" href="/">
+			<img src="img/gfw_logo_hor.svg" alt="logo global fishing watch">
 		</a>
 
 		<ul class="desktop-menu">
