--- a/public/form/changepassword.html
+++ b/public/form/changepassword.html
@@ -42,8 +42,8 @@
 			<path d="M0 2h25v4H0V2zm0 8h25v4H0v-4zm0 8h25v4H0v-4z" fill="#FFF" fill-rule="evenodd"/>
 		</svg>
 
-		<a href="/">
-			<h1 class="logo">Global Fishing Watch</h1>
+		<a class="logo" href="/">
+			<img src="img/gfw_logo_hor.svg" alt="logo global fishing watch">
 		</a>
 
 		<ul class="desktop-menu">
@@ -68,7 +68,7 @@
 					<li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
-			<li><a href="#" class="selected">Login</a></li>
+			<li><a href="#">Login</a></li>
 		</ul>
 	</header>
 
