--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -25,6 +25,7 @@
 				<ul class="submenu_mobile">
 					<li><a href="/the-project">The Project</a></li>
 					<li><a href="/partners">Partners</a></li>
+					<li><a href="/research-program">Research program</a></li>
 					<li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</ul>
@@ -64,7 +65,8 @@
 				<ul class="dropdown_content">
 					<li><a href="/the-project">The Project</a></li>
 					<li><a href="/partners">Partners</a></li>
-					<li><a href="/contact-us">Contact Us</a></li>
+          <li><a href="/research-program">Research program</a></li>
+          <li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Login</a></li>
