--- a/public/form/login.html
+++ b/public/form/login.html
@@ -83,8 +83,8 @@
 			<input type="password" id="gfw_password" placeholder="********" required />
 			<input type="submit" value="Login" />
 			<div class="other-links">
-				<a href="#" class="cancel link_underline">Forgot  your password?</a>
-				<a href="#" class="cancel link_underline">Not a member?</a>
+				<a href="resetpassword.html">Forgot  your password?</a>
+				<a href="registration.html">&nbsp;Not a member?</a>
 			</div>
 			<div class="separator">
         or
