update attribution content and styles

--- a/public/form/newpassword.html
+++ b/public/form/newpassword.html
@@ -94,6 +94,9 @@
 			<input type="submit" value="set password"/>
 		</form>
 	</section>
+	<div class="attribution-picture">
+		<span>Photo: Aysunbk/iStock/Thinkstock</span>
+	</div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
