--- a/public/form/resetpassword.html
+++ b/public/form/resetpassword.html
@@ -79,9 +79,12 @@
 			<label for="gfw_email">Email address *</label>
 			<input type="email" id="gfw_email" placeholder="Email address" required />
 			<input type="submit" value="SEND PASSWORD"/>
-			<a href="#" class="cancel">Cancel</a>
+			<a href="login.html" class="cancel">Cancel</a>
 		</form>
 	</section>
+	<div class="attribution-picture">
+		<span>Photo: Aysunbk/iStock/Thinkstock</span>
+	</div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
