--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -76,6 +76,9 @@
 		<p>Thank you for registering to Global Fishing Watch!</p>
     <p>You will receive an email confirmation shortly.</p>
 	</section>
+  <div class="attribution-picture">
+    <span>Photo: © OCEANA / Keith Ellenbogen</span>
+  </div>
 	<script>
 		var mobileMenu = document.querySelector('.mobile-menu');
 
