updated styles for header and side nav

--- a/public/form/login.html
+++ b/public/form/login.html
@@ -32,10 +32,10 @@
 				</ul>
 			</ul>
 			<a href="#" class="button_login">LOG IN</a>
-			<p class="forgot_text">
-				<a href="#">Forgot your password?</a>
-				<a href="#">Not a member</a>
-			</p>
+      <div class="other-links">
+				<a href="resetpassword.html">Remember password</a>
+				<a href="registration.html">Sign up</a>
+			</div>
 		</div>
 	</div>
 
