--- a/public/500.html
+++ b/public/500.html
@@ -37,13 +37,13 @@
 		</div>
 	</div>
 
-	<header class="menu">
+  <header class="menu wrap">
 		<svg class="hamburger-icon js-hamburger-menu" viewBox="0 0 25 25">
 			<path d="M0 2h25v4H0V2zm0 8h25v4H0v-4zm0 8h25v4H0v-4z" fill="#FFF" fill-rule="evenodd"/>
 		</svg>
 
-		<a href="/">
-			<h1 class="logo">Global Fishing Watch</h1>
+		<a class="logo" href="/">
+			<img src="form/img/gfw_logo_hor.svg" alt="logo global fishing watch">
 		</a>
 
 		<ul class="desktop-menu">
@@ -65,7 +65,8 @@
 				<ul class="dropdown_content">
 					<li><a href="/the-project">The Project</a></li>
 					<li><a href="/partners">Partners</a></li>
-					<li><a href="/contact-us">Contact Us</a></li>
+          <li><a href="/research-program">Research program</a></li>
+          <li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
 			<li><a href="#" class="selected">Login</a></li>
