replaced mobile menu with new markup

--- a/public/500.html
+++ b/public/500.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" type="text/css" href="form/css/messages.css">
 </head>
 <body>
-	<div class="mobile-menu js-mobile-menu">
+  <div class="mobile-menu js-mobile-menu">
 		<div class="drawer">
 			<ul>
 				<li><a href="/map">Map</a></li>
@@ -26,14 +26,15 @@
 				<ul class="submenu_mobile">
 					<li><a href="/the-project">The Project</a></li>
 					<li><a href="/partners">Partners</a></li>
+          <li><a href="/research-program">Research program</a></li>
 					<li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</ul>
 			<a href="#" class="button_login">LOG IN</a>
-			<p class="forgot_text">
-				<a href="#">Forgot your password?</a>
-				<a href="#">Not a member</a>
-			</p>
+      <div class="other-links">
+				<a href="resetpassword.html">Remember password</a>
+				<a href="registration.html">Sign up</a>
+			</div>
 		</div>
 	</div>
 
