unselected login in menu

--- a/public/500.html
+++ b/public/500.html
@@ -70,7 +70,7 @@
           <li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
-			<li><a href="#" class="selected">Login</a></li>
+			<li><a href="#">Login</a></li>
 		</ul>
 	</header>
 
