--- a/public/500.html
+++ b/public/500.html
@@ -66,7 +66,7 @@
 				<ul class="dropdown_content">
 					<li><a href="/the-project">The Project</a></li>
 					<li><a href="/partners">Partners</a></li>
-          <li><a href="/research-program">Research program</a></li>
+          <li><a href="/research-program">Research Program</a></li>
           <li><a href="/contact-us">Contact Us</a></li>
 				</ul>
 			</li>
