--- a/public/form/thankyou.html
+++ b/public/form/thankyou.html
@@ -7,36 +7,39 @@
 	<link rel="stylesheet" type="text/css" href="./css/styles.min.css">
 </head>
 <body class="bg ty">
-	<div class="mobile-menu js-mobile-menu">
-		<div class="drawer">
-			<ul>
-				<li><a href="/map">Map</a></li>
-				<li>News</li>
-				<ul class="submenu_mobile">
-					<li><a href="/blog">Blog</a></li>
-					<li><a href="/articles-publications">Articles and Publications</a></li>
-				</ul>
-				<li>How To</li>
-				<ul class="submenu_mobile">
-					<li><a href="/faq">FAQ</a></li>
-					<li><a href="/tutorials">Tutorials</a></li>
-					<li><a href="/definitions">Definitions</a></li>
-				</ul>
-				<li>About</li>
-				<ul class="submenu_mobile">
-					<li><a href="/the-project">The Project</a></li>
-					<li><a href="/partners">Partners</a></li>
-					<li><a href="/research-program">Research program</a></li>
-					<li><a href="/contact-us">Contact Us</a></li>
-				</ul>
-			</ul>
-			<a href="#" class="button_login">LOG IN</a>
-      <div class="other-links">
-				<a href="resetpassword.html">Remember password</a>
-				<a href="registration.html">Sign up</a>
-			</div>
-		</div>
-	</div>
+  <div class="menu-back"></div>
+  <div class="c-mobile-menu">
+    <ul>
+      <li>
+        <a href="/map">Map</a>
+      </li>
+      <li>News</li>
+        <ul class="submenu-mobile">
+          <li><a href="http://skytruth.org/blogger_import_test/global-fishing-watch-blog" target="_blank">Blog</a></li>
+          <li><a href="/articles-publications">Articles and Publications</a></li>
+        </ul>
+      <li>How to</li>
+        <ul class="submenu-mobile">
+          <li><a href="/faq">FAQ</a></li>
+          <li><a href="/tutorials">Tutorials</a></li>
+          <li><a href="/definitions">Definitions</a></li>
+        </ul>
+      <li>About</li>
+        <ul class="submenu-mobile">
+          <li><a href="/the-project">The project</a></li>
+          <li><a href="/partners">Partners</a></li>
+          <li><a href="/research-program">Research Program</a></li>
+          <li><a href="/contact-us">Contact us</a></li>
+        </ul>
+      </ul>
+    <div>
+      <button class="button-login">log in</button>
+      <p class="forgot-text">
+        <a href="https://trial-globalfishingwatch.cs43.force.com/gfw/GFWResetPassword" class="forgot-password">Remember password</a>
+        <button class="register">Sign up</button>
+      </p>
+    </div>
+  </div>
 
   <header class="menu wrap">
 		<svg class="hamburger-icon js-hamburger-menu" viewBox="0 0 25 25">
@@ -81,15 +84,19 @@
   <div class="attribution-picture">
     <span>Photo: © OCEANA / Keith Ellenbogen</span>
   </div>
-	<script>
-		var mobileMenu = document.querySelector('.mobile-menu');
+
+  <script>
+		var mobileMenu = document.querySelector('.c-mobile-menu'),
+      menuBack = document.querySelector('.menu-back');
 
 		document.querySelector('.js-hamburger-menu').addEventListener('click', function() {
-			mobileMenu.classList.toggle('-opened');
+			mobileMenu.classList.toggle('-show');
+      menuBack.classList.toggle('-show');
 		});
 
-		document.querySelector('.js-mobile-menu').addEventListener('click', function(e) {
-			if(e.target === mobileMenu) mobileMenu.classList.remove('-opened');
+		document.querySelector('.menu-back').addEventListener('click', function(e) {
+      mobileMenu.classList.remove('-show');
+      this.classList.remove('-show');
 		});
 	</script>
 </body>
