copy-pasted analytics code

--- a/app/index.html
+++ b/app/index.html
@@ -22,5 +22,19 @@
 </head>
 <body>
 <div id="app" style="height: 100%"></div>
+<script type="text/javascript">
+piAId = '184512';
+piCId = '1548';
+
+(function() {
+function async_load(){
+var s = document.createElement('script'); s.type = 'text/javascript';
+s.src = ('https:' == document.location.protocol ? 'https://pi' : 'http://cdn') + '.pardot.com/pd.js';
+var c = document.getElementsByTagName('script')[0]; c.parentNode.insertBefore(s, c);
+}
+if(window.attachEvent) { window.attachEvent('onload', async_load); }
+else { window.addEventListener('load', async_load, false); }
+})();
+</script>
 </body>
 </html>
