--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
   <!-- http://stackoverflow.com/questions/4687698/mulitple-apple-touch-startup-image-resolutions-for-ios-web-app-esp-for-ipad -->
   <!-- <link rel="apple-touch-startup-image" href=""> -->
 
-  <meta name="theme-color" content="#ffffff">
+  <meta name="theme-color" content="#18306d">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
