Fixed css globals

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 </head>
 <body>
-<div id="app" style="height: 100%"></div>
+<div id="app" class="full-height-container"></div>
 <script type="text/javascript">
 piAId = '184512';
 piCId = '1548';
