--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,14 @@
   <meta name="theme-color" content="#18306d">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+
+  <!-- META TAGS TWITTER CARD -->
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@globalfishwatch" />
+  <meta name="twitter:title" content="The First Global View of Commercial Fishing Activity" />
+  <meta name="twitter:description" content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free" />
+  <meta name="twitter:image" content="/image-twitter.png" />
+
 </head>
 <body>
 <div id="app" class="full-height-container"></div>
