--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,9 @@
   <!-- META TAGS TWITTER CARD -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@globalfishwatch" />
-  <meta name="twitter:title" content="The First Global View of Commercial Fishing Activity" />
+  <meta name="twitter:title" content="Global Fishing Watch" />
   <meta name="twitter:description" content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free" />
-  <meta name="twitter:image" content="/image-twitter.png" />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/Vizzuality/GlobalFishingWatch/master/public/apple-touch-icon.png" />
 
 </head>
 <body>
