--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,22 @@
   <!-- http://stackoverflow.com/questions/4687698/mulitple-apple-touch-startup-image-resolutions-for-ios-web-app-esp-for-ipad -->
   <!-- <link rel="apple-touch-startup-image" href=""> -->
 
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Global Fishing Watch">
+  <meta itemprop="description" content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free">
+  <meta itemprop="image" content="https://raw.githubusercontent.com/Vizzuality/GlobalFishingWatch/master/public/apple-touch-icon.png">
+
+  <!-- Open Graph data -->
+  <meta property="og:url"                content="http://globalfishingwatch.org/" />
+  <meta property="og:type"               content="website" />
+  <meta property="og:title"              content="Global Fishing Watch" />
+  <meta property="og:description"        content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free" />
+  <meta property="og:image" content="https://raw.githubusercontent.com/Vizzuality/GlobalFishingWatch/master/public/apple-touch-icon.png" />
+  <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/Vizzuality/GlobalFishingWatch/master/public/apple-touch-icon.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="400" />
+  <meta property="og:image:height" content="300" />
+
   <meta name="theme-color" content="#18306d">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
