--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
   <title>Global Fishing Watch</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <script src="https://maps.googleapis.com/maps/api/js?sensor=false&key=<%= htmlWebpackPlugin.options.key %>"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?sensor=false&v=3.26&key=<%= htmlWebpackPlugin.options.key %>"></script>
   <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
   <link rel="stylesheet" href="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/themes/css/cartodb.css"
         media="all" />
