Add Embed mode to share panel

--- a/public/testIFrame.html
+++ b/public/testIFrame.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>GlobalFishingWatch iFrame test</title>
-</head>
-<body>
-  test iframe
-  <iframe
-    src="http://vizzuality-dev.globalfishingwatch.org/map#access_token="
-    allowfullscreen="true"
-    width="100%"
-    height="400px">
-  </iframe>
-</body>
-</html>
+<html lang="en" >
+<head >
+  <meta charset="UTF-8" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" >
+  <title >GlobalFishingWatch iFrame test</title >
+</head >
+<body >
+test iframe
+<iframe allowfullscreen="true"
+        width="800" height="600" src="http://localhost:3000/map?workspace=udw-e193b8d1-7b6f-41e5-bd90-bcd991b99ad1" />
+</body >
+</html >
