--- a/public/shareEmbedSmall.html
+++ b/public/shareEmbedSmall.html
@@ -8,7 +8,6 @@
 </head >
 <body >
 <h1>test iframe for embed on another page</h1>
-<!--<iframe allowfullscreen="true" width="500" height="600" src="http://gfw-develop.herokuapp.com/workspace=udw-9e2529a1-4498-471a-ad15-8c1bfffd2864&embedded=true" />-->
-<iframe allowfullscreen="true" width="900" height="900" src="/workspace=udw-9e2529a1-4498-471a-ad15-8c1bfffd2864&embedded=true" />
+<iframe allowfullscreen="true" width="400" height="600" src="http://gfw-develop.herokuapp.com/?workspace=udw-9e2529a1-4498-471a-ad15-8c1bfffd2864&embedded=true" />
 </body >
 </html >
