Feature/map conditional render (#555)
* Remove site code

* Fix header and footer links; fix report form

* remove React router

* Add analytics support for single page

* Add analytics support for single page

* Remove unecessary dependency

* fixes login/logout flow + uses correct google analytics

* adds new env variable

* adds conditional map render depending on env + uri params

* adds env variable to webpack

* fixes renamed const issue

* removed unused constant

* always show header/footer on share embed + change header link on share embed

* removes map iframe

* removes blank when no footer

* changes embed modal styles to maintain same size

* Update README.md

* Remove additional elements on embed

* adds embed footer styles

* Link embed to map url

--- a/public/shareEmbedSmall.html
+++ b/public/shareEmbedSmall.html
@@ -7,8 +7,7 @@
   <title >GlobalFishingWatch iFrame test</title >
 </head >
 <body >
-test iframe
-<iframe allowfullscreen="true"
-        width="800" height="600" src="http://localhost:3000/map?workspace=udw-e193b8d1-7b6f-41e5-bd90-bcd991b99ad1" />
+<h1>test iframe for embed on another page</h1>
+<iframe allowfullscreen="true" width="400" height="600" src="http://gfw-develop.herokuapp.com/?workspace=udw-9e2529a1-4498-471a-ad15-8c1bfffd2864&embedded=true" />
 </body >
 </html >
