--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,9 @@
 </svg>
 
 <div id="app" class="full-height-container"></div>
+<script type="text/javascript" src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/FileSaver.js">
+
+</script>
 <script type="text/javascript">
 piAId = '184512';
 piCId = '1548';
