--- a/app/index.html
+++ b/app/index.html
@@ -22,7 +22,7 @@
 
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Global Fishing Watch">
-  <meta itemprop="description" content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free">
+  <meta itemprop="description" content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability.">
   <meta itemprop="image" content="http://globalfishingwatch.org/apple-touch-icon.png">
 
   <!-- Open Graph data -->
@@ -30,7 +30,7 @@
   <meta property="og:type"               content="website" />
   <meta property="og:site_name"          content="Global Fishing Watch" />
   <meta property="og:title"              content="Global Fishing Watch shared workspace" />
-  <meta property="og:description"        content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free" />
+  <meta property="og:description"        content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability." />
   <meta property="og:image" content="http://globalfishingwatch.org/social_image.jpg" />
   <meta property="og:image:secure_url" content="http://globalfishingwatch.org/social_image.jpg" />
   <meta property="og:image:type" content="image/jpg" />
@@ -45,7 +45,7 @@
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@globalfishwatch" />
   <meta name="twitter:title" content="Global Fishing Watch" />
-  <meta name="twitter:description" content="Global Fishing Watch enables anyone with an Internet connection to see fishing activity anywhere in the ocean in near real-time — for free" />
+  <meta name="twitter:description" content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability." />
   <meta name="twitter:image" content="http://globalfishingwatch.org/social_image.jpg" />
 
 </head>
