Change title to meet GFW v2 vision
Change `Global Fishing Watch` title and description on the social media and title with `Global Fishing Watch | Sustainability through Transparency` to meet the GFW v2 vision.

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Global Fishing Watch</title>
+  <title>Global Fishing Watch | Sustainability through Transparency</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="https://maps.googleapis.com/maps/api/js?v=3.27&key=${GOOGLE_API_KEY}&libraries=drawing"></script>
@@ -21,14 +21,14 @@
   <!-- <link rel="apple-touch-startup-image" href=""> -->
 
   <!-- Schema.org markup for Google+ -->
-  <meta itemprop="name" content="Global Fishing Watch">
+  <meta itemprop="name" content="Global Fishing Watch | Sustainability through Transparency">
   <meta itemprop="description" content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability.">
   <meta itemprop="image" content="http://globalfishingwatch.org/apple-touch-icon.png">
 
   <!-- Open Graph data -->
   <meta property="og:url"                content="http://globalfishingwatch.org/" />
   <meta property="og:type"               content="website" />
-  <meta property="og:site_name"          content="Global Fishing Watch" />
+  <meta property="og:site_name"          content="Global Fishing Watch | Sustainability through Transparency" />
   <meta property="og:title"              content="Global Fishing Watch shared workspace" />
   <meta property="og:description"        content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability." />
   <meta property="og:image" content="http://globalfishingwatch.org/social_image.jpg" />
@@ -44,7 +44,7 @@
   <!-- META TAGS TWITTER CARD -->
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@globalfishwatch" />
-  <meta name="twitter:title" content="Global Fishing Watch" />
+  <meta name="twitter:title" content="Global Fishing Watch | Sustainability through Transparency" />
   <meta name="twitter:description" content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability." />
   <meta name="twitter:image" content="http://globalfishingwatch.org/social_image.jpg" />
 
