Update social network card image to new url

--- a/app/index.html
+++ b/app/index.html
@@ -31,8 +31,8 @@
   <meta property="og:site_name"          content="Global Fishing Watch | Sustainability through Transparency" />
   <meta property="og:title"              content="Global Fishing Watch shared workspace" />
   <meta property="og:description"        content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability." />
-  <meta property="og:image" content="http://globalfishingwatch.org/social_image.jpg" />
-  <meta property="og:image:secure_url" content="http://globalfishingwatch.org/social_image.jpg" />
+  <meta property="og:image" content="http://globalfishingwatch.org/map/social_image.jpg" />
+  <meta property="og:image:secure_url" content="http://globalfishingwatch.org/map/social_image.jpg" />
   <meta property="og:image:type" content="image/jpg" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
@@ -46,7 +46,7 @@
   <meta name="twitter:site" content="@globalfishwatch" />
   <meta name="twitter:title" content="Global Fishing Watch | Sustainability through Transparency" />
   <meta name="twitter:description" content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability." />
-  <meta name="twitter:image" content="http://globalfishingwatch.org/social_image.jpg" />
+  <meta name="twitter:image" content="http://globalfishingwatch.org/map/social_image.jpg" />
 
 </head>
 <body>
