update path to use legacy-map

--- a/public/500.html
+++ b/public/500.html
@@ -12,7 +12,7 @@
   <div class="c-mobile-menu">
     <ul>
       <li>
-        <a href="/map">Map</a>
+        <a href="/legacy-map">Map</a>
       </li>
       <li>News</li>
         <ul class="submenu-mobile">
@@ -51,7 +51,7 @@
         </a>
         <ul class="menu">
           <li>
-            <a href="/map">Map</a>
+            <a href="/legacy-map">Map</a>
           </li>
           <li class="dropdown">
             <a class="-no-cursor">News</a>
