--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- <link rel="apple-touch-startup-image" href=""> -->
 
     <!-- Avoid duplicates in google analytics -->
-    <link rel="canonical" href="https://globalfishingwatch.org/map/" />
+    <link rel="canonical" href="https://globalfishingwatch.org/legacy-map/" />
 
     <!-- Schema.org markup for Google+ -->
     <meta itemprop="name" content="Global Fishing Watch | Sustainability through Transparency" />
@@ -43,10 +43,10 @@
       property="og:description"
       content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability."
     />
-    <meta property="og:image" content="https://globalfishingwatch.org/map/social_image.jpg" />
+    <meta property="og:image" content="https://globalfishingwatch.org/legacy-map/social_image.jpg" />
     <meta
       property="og:image:secure_url"
-      content="https://globalfishingwatch.org/map/social_image.jpg"
+      content="https://globalfishingwatch.org/legacy-map/social_image.jpg"
     />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="400" />
@@ -67,7 +67,7 @@
       name="twitter:description"
       content="Through our free and open data transparency platform, Global Fishing Watch enables research and innovation in support of ocean sustainability."
     />
-    <meta name="twitter:image" content="https://globalfishingwatch.org/map/social_image.jpg" />
+    <meta name="twitter:image" content="https://globalfishingwatch.org/legacy-map/social_image.jpg" />
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
